ticket: 6421 Subject: Implement KRB-FX_CF2
Draft-ietf-krb-wg-preauth-framework defines a function KRB-FX-CF2 that
combines two keys of arbitrary enctype.  Implement this function as an
exported API.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22094 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/Makefile.in
+++ b/src/lib/crypto/Makefile.in
@@ -36,6 +36,7 @@ PROG_RPATH=$(KRB5_LIBDIR)
 STLIBOBJS=\
 	aead.o		 	\
 	block_size.o		\
+	cf2.o \
 	checksum_length.o	\
 	cksumtype_to_string.o	\
 	cksumtypes.o		\
@@ -79,6 +80,7 @@ STLIBOBJS=\
 OBJS=\
 	$(OUTPRE)aead.$(OBJEXT)		 	\
 	$(OUTPRE)block_size.$(OBJEXT)		\
+	$(OUTPRE)cf2$(OBJEXT) \
 	$(OUTPRE)checksum_length.$(OBJEXT)	\
 	$(OUTPRE)cksumtype_to_string.$(OBJEXT)	\
 	$(OUTPRE)cksumtypes.$(OBJEXT)		\
@@ -151,6 +153,7 @@ SRCS=\
 	$(srcdir)/old_api_glue.c	\
 	$(srcdir)/pbkdf2.c	\
 	$(srcdir)/prf.c \
+	$(srcdir)/cf2.c \
 	$(srcdir)/prng.c		\
 	$(srcdir)/random_to_key.c	\
 	$(srcdir)/state.c \
