--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -219,6 +219,7 @@ KRB5_AD_MODULE_DIR = $(MODULE_DIR)/authdata
 KRB5_LIBKRB5_MODULE_DIR = $(MODULE_DIR)/libkrb5
 GSS_MODULE_DIR = @libdir@/gss
 KRB5_INCSUBDIRS = \
+	$(KRB5_INCDIR)/kadm5 \
 	$(KRB5_INCDIR)/krb5 \
 	$(KRB5_INCDIR)/gssapi \
 	$(KRB5_INCDIR)/gssrpc
