Function to parse FAST for KDC requests
* Add fast_util to KDC
* export fast_req decoder from libkrb5
* Function to find a fast request, extract and use inner body
* functions to free and create kdc_request_state

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/fast@22124 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/kdc/Makefile.in
+++ b/src/kdc/Makefile.in
@@ -24,6 +24,7 @@ SRCS= \
 	$(srcdir)/dispatch.c \
 	$(srcdir)/do_as_req.c \
 	$(srcdir)/do_tgs_req.c \
+	$(srcdir)/fast_util.c \
 	$(srcdir)/kdc_util.c \
 	$(srcdir)/kdc_preauth.c \
 	$(srcdir)/main.c \
@@ -38,6 +39,7 @@ OBJS= \
 	dispatch.o \
 	do_as_req.o \
 	do_tgs_req.o \
+	fast_util.o \
 	kdc_util.o \
 	kdc_preauth.o \
 	main.o \
