Implement Encrypted Challenge fast factor
Implement the encrypted challenge fast factor.  As part of this,
expose an interface for a preauth method to request the FAST armor
key.

* plugins/preauth/encrypted_challenge: new plugin
* include/krb5/krb5.hin: constants (keyusages) for encrypted challenge
* include/k5-int.h krb5/os/accessor.c: expose interfaces needed by encrypted challenge
* kdc/kdc_preauth.c lib/krb5/krb/preauth2.c include/krb5/preauth_plugin.h: interface for
          fast armor key
* kdc/do_as_req.c: make fast state available to preauth
* lib/krb5/krb/get_in_tkt.c: initialize etype based on etype of AS reply
*  lib/krb5/krb/preauth2.c: Etype given to plugins tracked the same way as etype used internally

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/fast@22145 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -12,6 +12,7 @@ mydir=.
 SUBDIRS=util include lib kdc kadmin @ldap_plugin_dir@ slave clients \
 	plugins/kdb/db2 \
 	plugins/preauth/pkinit \
+	plugins/preauth/encrypted_challenge \
 	appl tests \
 	config-files gen-manpages
 BUILDTOP=$(REL)$(C)
