ticket: 6398 version_fixed: 1.7
pull up r22038 from trunk

 ticket: 6398
 subject: remove obsolete GNU.ORG realm info
 target_version: 1.7
 tags: pullup

 Our sample krb5.conf has obsolete info on the GNU.ORG realm; the DNS
 entries named don't exist, and AFAIK this hasn't been accurate in
 years.  (I don't even know if they're currently running a Kerberos
 realm.)

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-7@22202 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config-files/krb5.conf
+++ b/src/config-files/krb5.conf
@@ -2,6 +2,7 @@
 	default_realm = ATHENA.MIT.EDU
 
 [realms]
+# use "kdc = ..." if realm admins haven't put SRV records into DNS
 	ATHENA.MIT.EDU = {
 		admin_server = KERBEROS.MIT.EDU
 		default_domain = MIT.EDU
@@ -13,12 +14,6 @@
 	ANDREW.CMU.EDU = {
 		admin_server = vice28.fs.andrew.cmu.edu
 	}
-# use "kdc =" if realm admins haven't put SRV records into DNS
-        GNU.ORG = {
-                kdc = kerberos.gnu.org
-                kdc = kerberos-2.gnu.org
-                admin_server = kerberos.gnu.org
-        }
 
 [domain_realm]
 	.mit.edu = ATHENA.MIT.EDU
