ticket: 6348 version_fixed: 1.7
pull up r21966, r22042 from trunk

 ------------------------------------------------------------------------
 r22042 | rra | 2009-02-20 13:48:26 -0500 (Fri, 20 Feb 2009) | 5 lines
 Changed paths:
    M /trunk/src/kadmin/cli/Makefile.in

 Ticket: 6348
 Tags: pullup

 Also install k5srvutil into PREFIX/bin instead of PREFIX/sbin.

 ------------------------------------------------------------------------
 r21966 | rra | 2009-02-11 00:00:24 -0500 (Wed, 11 Feb 2009) | 6 lines
 Changed paths:
    M /trunk/src/kadmin/cli/Makefile.in
    M /trunk/src/kadmin/ktutil/Makefile.in

 Ticket: 6348
 Tags: pullup

 Install ktutil and kadmin into CLIENT_BINDIR instead of ADMIN_BINDIR
 since both are useful for users other than the system administrator.

 ------------------------------------------------------------------------

git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-7@22206 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/kadmin/ktutil/Makefile.in
+++ b/src/kadmin/ktutil/Makefile.in
@@ -20,7 +20,7 @@ ktutil: ktutil.o $(OBJS) $(SS_DEPLIB) $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o ktutil $(OBJS) $(SS_LIB) $(KRB5_BASE_LIBS)
 
 install::
-	$(INSTALL_PROGRAM) ktutil ${DESTDIR}$(ADMIN_BINDIR)/ktutil
+	$(INSTALL_PROGRAM) ktutil ${DESTDIR}$(CLIENT_BINDIR)/ktutil
 	$(INSTALL_DATA) $(srcdir)/ktutil.M ${DESTDIR}$(ADMIN_MANDIR)/ktutil.8
 
 generate-files-mac: ktutil_ct.c
