--- a/src/lib/krb5/os/Makefile.in
+++ b/src/lib/krb5/os/Makefile.in
@@ -221,6 +221,8 @@ check-unix::
 #	fi
 	echo 'auth_to_local = RULE:[3:$$1$$3$$2](rule.*)s/rule//g' \
 		>> ./t_an.conf
+	echo 'auth_to_local = RULE:[4:wi$$1ma]s/x/l/g' \
+		>> ./t_an.conf
 	echo 'auth_to_local = DEFAULT' >> ./t_an.conf
 	echo '}' >> ./t_an.conf
 #	if test -r ../../../admin/aname/kdb5_anadd ; then \
@@ -230,7 +232,7 @@ check-unix::
 	KRB5_CONFIG=./t_an.conf ; export KRB5_CONFIG ; \
 	$(KRB5_RUN_ENV) $(VALGRIND) ./t_an_to_ln rul/helpme/e@r ru/123/le@r
 	KRB5_CONFIG=./t_an.conf ; export KRB5_CONFIG ; \
-	$(KRB5_RUN_ENV) $(VALGRIND) ./t_an_to_ln fred/r@r barney/r@r
+	$(KRB5_RUN_ENV) $(VALGRIND) ./t_an_to_ln fred/r@r barney/r@r x/r/r/r@r
 	$(RM) ./t_an.*
 
 clean:: 
