libkdb5 now depends on libgssrpc.  So when linking kpropd, specify $(KDB5_LIB) before $(KADMCLNT_LIBS) to get the link order right. Unimportant for dynamic linking in most environments, but relevant for static linking.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22405 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/slave/Makefile.in
+++ b/src/slave/Makefile.in
@@ -23,8 +23,8 @@ SRCS= $(CLIENTSRCS) $(SERVERSRCS) $(LOGSRCS)
 kprop: $(CLIENTOBJS) $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o kprop $(CLIENTOBJS) $(KRB5_BASE_LIBS) @LIBUTIL@
 
-kpropd: $(SERVEROBJS) $(KADMCLNT_DEPLIBS) $(KDB5_DEPLIB) $(KRB5_BASE_DEPLIBS) $(APPUTILS_DEPLIB)
-	$(CC_LINK) -o kpropd $(SERVEROBJS) $(KADMCLNT_LIBS) $(KDB5_LIB) $(KRB5_BASE_LIBS) $(APPUTILS_LIB) @LIBUTIL@
+kpropd: $(SERVEROBJS) $(KDB5_DEPLIB) $(KADMCLNT_DEPLIBS) $(KRB5_BASE_DEPLIBS) $(APPUTILS_DEPLIB)
+	$(CC_LINK) -o kpropd $(SERVEROBJS) $(KDB5_LIB) $(KADMCLNT_LIBS) $(KRB5_BASE_LIBS) $(APPUTILS_LIB) @LIBUTIL@
 
 kproplog: $(LOGOBJS)
 	$(CC_LINK) -o kproplog $(LOGOBJS) $(KADMSRV_LIBS) $(KRB5_BASE_LIBS)
