In pre.in, remove some variable expansions in the definition of DEJAFLAGS which aren't used anywhere in the tree.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22430 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -242,8 +242,7 @@ SRVTCL		= $(TESTDIR)/util/ovsec_kadm_srv_tcl
 # If we don't set it, then the host type used is "native", which
 # doesn't match "*-*-*".
 host=@krb5_cv_host@
-DEJAFLAGS	= $(DEJALFLAGS) $(CLFLAGS) --debug --srcdir $(srcdir) --host \
-		   $(host)
+DEJAFLAGS	= --debug --srcdir $(srcdir) --host $(host)
 RUNTEST		= runtest $(DEJAFLAGS)
 
 START_SERVERS	= $(STESTDIR)/scripts/start_servers $(TEST_SERVER) $(TEST_PATH)
