Make datetest buildable again.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22432 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/kadmin/cli/Makefile.in
+++ b/src/kadmin/cli/Makefile.in
@@ -39,8 +39,9 @@ generate-files-mac: kadmin_ct.c getdate.c
 clean::
 	$(RM) $(PROG).local $(PROG) $(COMMON_OBJS) $(KADMIN_OBJS) $(LOCAL_OBJS)
 clean-unix::
-	$(RM) getdate.c kadmin_ct.c
+	$(RM) datetest getdate.c kadmin_ct.c
 
 # for testing getdate.y
+# CC_LINK is not meant for compilation and this use may break in the future.
 datetest: getdate.c
-	$(CC) -o datetest $(ALL_CFLAGS) $(LDFLAGS) $(LDARGS) -DTEST getdate.c
+	$(CC_LINK) $(ALL_CFLAGS) -DTEST -o datetest getdate.c
